--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <configuration>
           <PlatformName>${value}</PlatformName>
 	      <PlatformVersion>${value}</PlatformVersion>
+	      <DeviceUDID>${value}</DeviceUDID>
           
         </configuration>
       </plugin>
